kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botodachi
  template:
    metadata:
      labels:
        app: botodachi
    spec:
      containers:
        - name: botodachi
          image: grimreapermortis/botodachi:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
