kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-service
  namespace: demo
spec:
  selector:
    app: botodachi
  ports:
    - port: 3000
  type: LoadBalancer
