kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bot-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - mortis-grimreaper.ddns.net
      secretName: mortis-tls
  rules:
    - host: mortis-grimreaper.ddns.net
      http:
        paths:
          - backend:
              serviceName: bot-service
              servicePort: 3000
            path: /bot
